syntax = "proto3";

import "google/api/annotations.proto";

package Aphro.Redis.pb;

service RedisService {

		//query create delete update Redis
		rpc isExists(isExistsRequest) returns (isExistsResponse) {}

		rpc expireAt(expireAtRequest) returns (expireAtResponse) {}

		rpc queryTtl(queryTtlRedisRequest) returns (queryTtlRedisResponse){}

		rpc query(queryRedisRequest) returns (queryRedisResponse) {}

		rpc delete(deleteRedisRequest) returns (deleteRedisResponse) {}

		rpc set(setRedisRequest) returns (setRedisResponse) {}

}

message queryTtlRedisRequest {
	string key = 1;
}

message queryTtlRedisResponse {
	int64 ttl = 1; //-2 不存在 -1没有ttl 
}

message expireAtRequest {
	string key = 1;
	int64 ttl = 2;
}

message expireAtResponse {
	bool  successed = 1;
}

message isExistsRequest {
	string key = 1;
}

message isExistsResponse {
	bool isExists = 1;
}

message queryRedisRequest {
	string key = 1;
}

message queryRedisResponse {
	bool successed = 1;
	string value = 2;
}

message deleteRedisRequest {
	string key = 1;
}

message deleteRedisResponse {
	bool successed = 1;
}

message setRedisRequest {
	string key = 1;
	string value = 2;
	uint64	ttl =	3;
}

message setRedisResponse {
	bool successed = 1;
}




